<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/rotate_wrist"
            android:layout_width="228dp"
            android:layout_height="62dp"
            android:id="@+id/rotate_Wrist" android:typeface="normal"
            android:textSize="36sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.743"
            app:layout_constraintVertical_bias="0.088"/>
    <ImageButton
            android:layout_width="130dp"
            android:layout_height="165dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/wristDecrease"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.65"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.222"/>
    <ImageButton
            android:layout_width="135dp"
            android:layout_height="155dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/wristIncrease"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintVertical_bias="0.222"/>
    <ImageButton
            android:layout_width="131dp"
            android:layout_height="176dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/tightenIncrease"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.783" app:layout_constraintVertical_bias="0.803"/>
    <TextView
            android:text="@string/tighten_grip"
            android:layout_width="219dp"
            android:layout_height="62dp"
            android:id="@+id/tighten_Grip" android:typeface="normal"
            android:textSize="36sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.737"
            app:layout_constraintVertical_bias="0.565"/>
    <ImageButton
            android:layout_width="135dp"
            android:layout_height="173dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/tightenDecrease" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.657" app:layout_constraintVertical_bias="0.797"/>
    <ImageButton
            android:layout_width="152dp"
            android:layout_height="169dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/bendWristIncrease"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.787" app:layout_constraintHorizontal_bias="0.51"/>
    <TextView
            android:text="@string/bend_wrist"
            android:layout_width="227dp"
            android:layout_height="56dp"
            android:id="@+id/bend_Wrist" android:typeface="normal"
            android:textSize="36sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintVertical_bias="0.569"/>
    <ImageButton
            android:layout_width="148dp"
            android:layout_height="165dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/bendWristDecrease"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.366" app:layout_constraintVertical_bias="0.789"/>
    <ImageButton
            android:layout_width="147dp"
            android:layout_height="152dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/elbowBendIncrease"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.224"/>
    <TextView
            android:text="@string/bend_elbow"
            android:layout_width="224dp"
            android:layout_height="62dp"
            android:id="@+id/bend_Elbow" android:typeface="normal"
            android:textSize="36sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintVertical_bias="0.088"/>
    <ImageButton
            android:layout_width="149dp"
            android:layout_height="148dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/elbowBendDecrease"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.359"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221"/>
    <ImageButton
            android:layout_width="147dp"
            android:layout_height="152dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/shoulderBendIncrease" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.183" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.223"/>
    <TextView
            android:text="@string/bend_shoulder"
            android:layout_height="66dp"
            android:id="@+id/rotate_Shoulder" android:typeface="normal"
            android:textSize="36sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" android:layout_width="276dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.089"/>
    <ImageButton
            android:layout_width="152dp"
            android:layout_height="152dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/shoulderBendDecrease"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.045" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.222"
            app:layout_constrainedWidth="false"/>
    <ImageButton
            android:layout_width="154dp"
            android:layout_height="167dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/rotateBaseDecrease" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.03" app:layout_constraintVertical_bias="0.791"/>
    <TextView
            android:text="@string/rotate_base"
            android:layout_width="264dp"
            android:layout_height="54dp"
            android:id="@+id/Rotate_Base" android:typeface="normal"
            android:textSize="36sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintVertical_bias="0.555"/>
    <ImageButton
            android:layout_width="140dp"
            android:layout_height="166dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/rotateBaseIncrease" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintVertical_bias="0.797"/>
    <Button
            android:text="@string/emergency_stop"
            android:layout_width="208dp"
            android:layout_height="159dp"
            android:textSize="24sp"
            android:id="@+id/emergency" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.982"
            app:layout_constraintVertical_bias="0.201"/>
    <Button
            android:text="@string/grab_candy"
            android:layout_width="204dp"
            android:layout_height="161dp"
            android:textSize="24sp"
            android:id="@+id/candy_grab" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.979" app:layout_constraintVertical_bias="0.793"/>
</android.support.constraint.ConstraintLayout>