<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/rotate_wrist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rotate_Wrist" android:typeface="normal"
            android:textSize="24sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.747"
            app:layout_constraintVertical_bias="0.068"/>
    <ImageButton
            android:layout_width="67dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/wristDecrease"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.65"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.222"/>
    <ImageButton
            android:layout_width="67dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/wristIncrease"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintVertical_bias="0.222"/>
    <ImageButton
            android:layout_width="67dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/tightenIncrease"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.781" app:layout_constraintVertical_bias="0.933"/>
    <TextView
            android:text="@string/tighten_grip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tighten_Grip" android:typeface="normal"
            android:textSize="24sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintVertical_bias="0.676"/>
    <ImageButton
            android:layout_width="67dp"
            android:layout_height="71dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/tightenDecrease" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.65" app:layout_constraintVertical_bias="0.937"/>
    <ImageButton
            android:layout_width="65dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/bendWristIncrease"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.924" app:layout_constraintHorizontal_bias="0.479"/>
    <TextView
            android:text="@string/bend_wrist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bend_Wrist" android:typeface="normal"
            android:textSize="24sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.389"
            app:layout_constraintVertical_bias="0.665"/>
    <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/bendWristDecrease"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.351" app:layout_constraintVertical_bias="0.924"/>
    <ImageButton
            android:layout_width="64dp"
            android:layout_height="69dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/elbowBendIncrease"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.48" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221"/>
    <TextView
            android:text="@string/bend_elbow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bend_Elbow" android:typeface="normal"
            android:textSize="24sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintVertical_bias="0.068"/>
    <ImageButton
            android:layout_width="67dp"
            android:layout_height="69dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/elbowBendDecrease"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.349"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221"/>
    <ImageButton
            android:layout_width="67dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/shoulderBendIncrease" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.184" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.217"/>
    <TextView
            android:text="@string/bend_shoulder"
            android:layout_height="wrap_content"
            android:id="@+id/rotate_Shoulder" android:typeface="normal"
            android:textSize="24sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.068"/>
    <ImageButton
            android:layout_width="69dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/shoulderBendDecrease"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.045" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.222"
            app:layout_constrainedWidth="false"/>
    <ImageButton
            android:layout_width="74dp"
            android:layout_height="75dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/rotateBaseDecrease" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.033" app:layout_constraintVertical_bias="0.94"/>
    <TextView
            android:text="@string/rotate_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Rotate_Base" android:typeface="normal"
            android:textSize="24sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintVertical_bias="0.676"/>
    <ImageButton
            android:layout_width="69dp"
            android:layout_height="74dp" app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/rotateBaseIncrease" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintVertical_bias="0.941"/>
    <Button
            android:text="@string/emergency_stop"
            android:layout_width="108dp"
            android:layout_height="71dp"
            android:id="@+id/emergency" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.214"/>
    <Button
            android:text="@string/grab_candy"
            android:layout_width="109dp"
            android:layout_height="70dp"
            android:id="@+id/candy_grab" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.933"/>
</android.support.constraint.ConstraintLayout>